new project in workspace for office     Eliminate duplicate OOTools