@@ -17,15 +17,14 @@ import javax.swing.table.TableCellEditor;
 import CommonTools.JRtaTextField;
 
 public class DblCellEditor extends AbstractCellEditor implements KeyListener, TableCellEditor {
-    /**
-     * 
-     */
     private static final long serialVersionUID = -2101893331215081609L;
-    JComponent component = new JRtaTextField("D", true, "6.2", "");
-    boolean mitMaus = false;
+    private JComponent component = new JRtaTextField("D", true, "6.2", "");
+    private boolean mitMaus;
 
-    // This method is called when editing is completed.
-    // It must return the new value to be stored in the cell.
+    /**
+     * This method is called when editing is completed.
+     * It must return the new value to be stored in the cell.
+     */
     public DblCellEditor() {
         component.addKeyListener(this);
     }
@@ -36,17 +35,17 @@ public class DblCellEditor extends AbstractCellEditor implements KeyListener, Ta
         try {
             foo = ((JFormattedTextField) component).getText()
                                                    .replaceAll(",", ".");
-            if (foo.length() == 0) {
+            if (foo.isEmpty()) {
                 foo = "0.00";
             }
         } catch (Exception ex) {
             foo = "0.00";
         }
-        double i_spent_hours_on_this = Double.valueOf(foo);
-        return new Double(i_spent_hours_on_this);
+        double i_spent_hours_on_this = Double.parseDouble(foo);
+        return Double.valueOf(i_spent_hours_on_this);
     }
 
-    // This method is called when a cell value is edited by the user.
+    /** This method is called when a cell value is edited by the user. */
     @Override
     public Component getTableCellEditorComponent(JTable table, Object value, boolean isSelected, int row, int column) {
         // Configure the component with the specified value
@@ -54,7 +53,6 @@ public class DblCellEditor extends AbstractCellEditor implements KeyListener, Ta
             ((JFormattedTextField) component).setText(String.valueOf(value));
             ((JFormattedTextField) component).selectAll();
             ((JFormattedTextField) component).setHorizontalAlignment(SwingConstants.RIGHT);
-
         } else {
             final String xvalue = String.valueOf(value);
             SwingUtilities.invokeLater(new Runnable() {
@@ -67,7 +65,6 @@ public class DblCellEditor extends AbstractCellEditor implements KeyListener, Ta
                     ((JFormattedTextField) component).setCaretPosition(0);
                 }
             });
-
         }
 
         // Return the configured component
@@ -92,21 +89,17 @@ public class DblCellEditor extends AbstractCellEditor implements KeyListener, Ta
 
     @Override
     public void keyPressed(KeyEvent arg0) {
-
         if (mitMaus && arg0.getKeyCode() == KeyEvent.VK_ENTER) {
             //// System.out.println("in Maus + Return gedrückt");
-            this.fireEditingStopped();
+            fireEditingStopped();
         }
     }
 
     @Override
     public void keyReleased(KeyEvent arg0) {
-
     }
 
     @Override
     public void keyTyped(KeyEvent arg0) {
-
     }
-
 }
